cmake_minimum_required(VERSION 3.23)
project(Cinder VERSION 0.0.1 LANGUAGES CXX)

#Language config
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

#Outputs config
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(NAME_EXE_MAP_GENERATOR "mapgen")
set(NAME_LIB_MAP_GENERATOR "mapgenlib")

add_subdirectory("./MapGenerator")